--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -427,10 +427,10 @@ For example: `date -Ins` prints "2024-04-22T12:20:28,763742224+02:00" and `date 
 gitref:eeb04a736cb9[repository=src]
 
 The man:dtrace[1] utility can now generate machine-readable output in JSON, XML, and HTML using man:libxo[3].
-gitref:aef4504139a4[repository=src] (Sponsored by Innovate UK)
+gitref:aef4504139a4[repository=src] {{< sponsored "Innovate UK" >}}
 
 The man:lastcomm[1] utility now displays timestamps with a precision of seconds.
-gitref:692c0a2e80c1[repository=src] (Sponsored by DSS Gmbh)
+gitref:692c0a2e80c1[repository=src] {{< sponsored "DSS Gmbh" >}}
 
 The man:ldconfig[8] utility now supports hints files of either byte order.
 The default format is the native byte-order of the host.
@@ -440,20 +440,20 @@ The man:usbconfig[8] utility now reads the descriptions of usb vendor and produc
 gitref:7b9a772f9f64[repository=src]
 
 An option has been added to change the directory in man:env[1] which closely resembles the feature in the GNU version of env, although it does not support long options.
-gitref:08e8554c4a39[repository=src] (Sponsored by Klara, Inc.)
+gitref:08e8554c4a39[repository=src] {{< sponsored "Klara, Inc." >}}
 
 man:ps[1] now automatically removes canned displays' columns that contain same data as some explicitly-requested columns.
 Before this change, if some user requested to add some "canned display" (options `-j`, `-l`, `-u` or `-v`), columns in it that were duplicates of explicitly-requested ones earlier on the command line were omitted, but this did not work the other way around, when a canned display appears before explicitly-requested columns.
 Additionally, columns with different keywords but which are aliases to the same
 keyword are now also considered holding the same data, in addition to columns having the same keyword.
 gitref:cd768a840644[repository=src]
-(Sponsored by The FreeBSD Foundation.)
+{{< sponsored "The FreeBSD Foundation" >}}
 
 man:ps[1]'s `-O` option is now more versatile and predictable.
 The man:ps[1] display's list of columns is now first built without taking into account the `-O` options.
 In a second step, all columns passed via `-O` are finally inserted after the built-so-far display's first PID column (if it exists, else at start), in their order of appearance as arguments to the `-O` options.
 gitref:5dad61d9b949[repository=src]
-(Sponsored by The FreeBSD Foundation.)
+{{< sponsored "The FreeBSD Foundation" >}}
 
 man:ps[1]'s `-a` and `-A` options now always show all processes.
 When combined with other options affecting the selection of processes, except for `-X` and `-x`, option `-a` would have no effect (and `-A` would reduce to just `-x`).
@@ -462,19 +462,19 @@ As a practical consequence, specifying `-a` or `-A` now causes all processes to 
 In particular, to list only processes from specific jails, one must not use `-a` with `-J`.
 Option `-J`, contrary to its apparent initial intent, never worked as a filter in practice, except by accident with only `-a` due to the bug.
 gitref:93a94ce731a8[repository=src]
-(Sponsored by The FreeBSD Foundation.)
+{{< sponsored "The FreeBSD Foundation" >}}
 
 man:ps[1] now matches current user's processes using the effective user ID.
 Previously, we would match using the real user ID.
 This puts man:ps[1] in conformance with POSIX on that topic.
 gitref:1aabbb25c9f9c4372[repository=src]
-(Sponsored by The FreeBSD Foundation.)
+{{< sponsored "The FreeBSD Foundation" >}}
 
 man:ps[1]'s `-U` flag now selects processes by real user IDs.
 This is what POSIX mandates for option `-U` and arguably the behavior that most users actually need in most cases.
 Before, `-U` would select processes by their effective user IDs (which is the behavior mandated by POSIX for option `-u`).
 gitref:995b690d1398[repository=src]
-(Sponsored by The FreeBSD Foundation.)
+{{< sponsored "The FreeBSD Foundation" >}}
 
 Add flags to filter jail prison and vnet variables in man:sysctl[8] output.
 So users do not have to contact the source code to tell whether a variable is a jail prison / vnet one or not.
@@ -488,8 +488,8 @@ man:mdo[1] now supports fully specifying all users and groups in the target cred
 As a convenience, in addition to a full explicit specification, it allows starting from a baseline providing default values for all attributes, which is either the login credentials from some user in the password database or the current credentials, and then amending these attributes selectively.
 The manual page has been updated to describe the new options and their interactions.
 gitref:4ffcb1a4a99c[repository=src]
-(Sponsored by The FreeBSD Foundation.)
-(Sponsored by Google LLC (GSoC 2025).)
+{{< sponsored "The FreeBSD Foundation" >}}
+{{< sponsored "Google LLC (GSoC 2025)" >}}
 
 [[userland-contrib]]
 === Contributed Software
@@ -518,19 +518,19 @@ gitref:4afb96fdd272[repository=src].
 gitref:2ae238160f20[repository=src]
 
 `libcbor` has been upgraded to 0.11.0.
-gitref:1755b9daa693[repository=src] (Sponsored by The FreeBSD Foundation)
+gitref:1755b9daa693[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
 `libcxxrt` has been upgraded to vendor snapshot 6f2fdfebcd62.
 gitref:d0dcee46d971[repository=src]
 
 `libfido2` has been upgraded to 1.14.0.
-gitref:128bace5102e[repository=src] (Sponsored by The FreeBSD Foundation)
+gitref:128bace5102e[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
 `libpcap` has been upgraded to 1.10.5.
-gitref:26f21a6494b4[repository=src] (Sponsored by The FreeBSD Foundation)
+gitref:26f21a6494b4[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
 `tcpdump` has been upgraded to 4.99.5.
-gitref:ec3da16d8bc1[repository=src] (Sponsored by The FreeBSD Foundation)
+gitref:ec3da16d8bc1[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
 `unbound` has been upgraded to 1.22.0.
 gitref:0a096a7b3ae8[repository=src]
@@ -552,7 +552,7 @@ man:expat[3] has been updated to 2.7.1(gitref:6f7ee9ac036e[repository=src]).
 `tzdata` has been updated to 2025b(gitref:475082194ac8[repository=src]).
 
 OpenSSH has been updated to 9.9p2(gitref:059b786b7db5[repository=src]).
-(Sponsored by The FreeBSD Foundation).
+{{< sponsored "The FreeBSD Foundation" >}}
 
 OpenSSL has been updated to 3.0.16(gitref:cb29db243bd0[repository=src]).
 
@@ -570,22 +570,22 @@ Similarly, the umask can have the value `inherit`.
 gitref:c328e6c6ccaa[repository=src],
 gitref:d162d7e2ad32[repository=src],
 gitref:f2a0277d3e51[repository=src]
-(Sponsored by Kumacom SAS)
+{{< sponsored "Kumacom SAS" >}}
 
 Many string and memory operations in the C library now use SIMD (single instruction multiple data) extensions for improved performance when available on amd64 systems; see man:simd[7].
-(Sponsored by The FreeBSD Foundation)
+{{< sponsored "The FreeBSD Foundation" >}}
 
 There is now a much better implementation of the 128-bit `tgammal` function in the math library, man:math[3], on platforms that support it.
 gitref:8df6c930c151[repository=src]
 
 man:fma[3] now returns correctly-signed zero when provided certain small inputs (as observed in the Python test suite).
 gitref:dc39004bc670[repository=src]
-(Sponsored by The FreeBSD Foundation)
+{{< sponsored "The FreeBSD Foundation" >}}
 
 The `cap_rights_is_empty` function has been added.
 It reports whether a `cap_rights_t` has no rights set.
 gitref:e77813f7e4a3[repository=src]
-(Sponsored by The FreeBSD Foundation)
+{{< sponsored "The FreeBSD Foundation" >}}
 
 `libcxxrt` has been updated to upstream 6f2fdfebcd62(gitref:d9901a23bd2f[repository=src]).
 
@@ -605,19 +605,19 @@ gitref:8878569103a3[repository=src],
 gitref:7132fb5edbc9[repository=src],
 gitref:2932e6f59bff[repository=src],
 gitref:8878569103a3[repository=src]
-(Sponsored by The FreeBSD Foundation.)
+{{< sponsored "The FreeBSD Foundation" >}}
 
 `libc` contains compatibility functions enabling running executables/libraries compiled for older versions of FreeBSD.
 Those that are themselves using compatibility system calls would not reference them correctly, causing misbehavior at runtime.
 This has been fixed.
 gitref:47f5f89dbd27[repository=src]
-(Sponsored by The FreeBSD Foundation.)
+{{< sponsored "The FreeBSD Foundation" >}}
 
 [[userland-deprecated-programs]]
 === Deprecated Applications
 
 man:fdisk[8] has been deprecated in favor of man:gpart[8] for a long time but has not been removed, running this application will show a warning to migrate to man:gpart[8].
-gitref:3958be5c29da[repository=src] (Sponsored by The FreeBSD Foundation)
+gitref:3958be5c29da[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
 Update deprecation warning to note that man:gvinum[8] is removed in 15.0(gitref:dec497a9fcbf[repository=src]).
 
@@ -625,7 +625,7 @@ Deprecation notice for man:syscons[4] has been added.
 man:syscons[4] is not compatible with UEFI, does not support UTF-8, and is Giant-locked.
 There is no specific timeline yet for removing it, but support for the Giant lock is expected to go away in one or two major release cycles.
 (gitref:8c922db4f3d9[repository=src]).
-(Sponsored by The FreeBSD Foundation).
+{{< sponsored "The FreeBSD Foundation" >}}
 
 OpenSSH plans to remove support for the DSA signature algorithm in early 2025.
 
@@ -641,7 +641,7 @@ This section covers changes in support for cloud environments.
 {releaseCurrent} supports cloudinit, including the `nuageinit` startup script and support for a `config-drive` partition.
 It is compatible with OpenStack and many hosting facilities.
 See the https://cloud-init.io[cloud-init] web site and the commit messages,
-gitref:16a6da44e28d[repository=src] gitref:227e7a205edf[repository=src]. (Sponsored by OVHcloud)
+gitref:16a6da44e28d[repository=src] gitref:227e7a205edf[repository=src]. {{< sponsored "OVHcloud" >}}
 
 The FreeBSD project is now publishing OCI-compatible container images.
 gitref:8a688fcc242e[repository=src]
@@ -653,18 +653,18 @@ for more information.
 gitref:77b296a2582b[repository=src]
 
 The "shutdown" and "reboot" API in the Amazon EC2 cloud now work for arm64 ("Graviton") instances.
-gitref:28b881840df7[repository=src] (Sponsored by Amazon)
+gitref:28b881840df7[repository=src] {{< sponsored "Amazon" >}}
 
 Several bug fixes and configuration changes collectively allow device hotplug on both x86 and arm64 ("Graviton") EC2 instances.
 gitref:ce9a34b1614e[repository=src]
 gitref:55c3348ed78f[repository=src]
 gitref:d70bac252d30[repository=src]
-(Sponsored by Amazon)
+{{< sponsored "Amazon" >}}
 
 Users upgrading EC2 instances from earlier FreeBSD releases should set `hw.pci.intx_reroute=0` and `debug.acpi.quirks="56"` in `/boot/loader.conf`.
 
 The FreeBSD project now publishes "small" EC2 images; these are the "base" images minus debug symbols, tests, 32-bit libraries, the LLDB debugger, the Amazon SSM Agent, and the AWS CLI.
-gitref:953142d6baf3[repository=src] (Sponsored by Amazon)
+gitref:953142d6baf3[repository=src] {{< sponsored "Amazon" >}}
 
 The FreeBSD project now publishes "builder" EC2 images; these boot into a memory disk and extract a clean "base" image onto the root disk (mounted at `/mnt`) to be customized before creating an AMI.
 gitref:584265890303[repository=src] (Sponsored by Amazon)
@@ -682,14 +682,14 @@ This section covers changes to kernel configurations, system tuning, and system 
 FreeBSD now natively implements the Linux man:inotify[2] interface.
 The system calls themselves are not API-compatible, but libc provides an API-compatible interface, so software which relies on inotify can be run unmodified.
 gitref:f1f230439fa4[repository=src],
-(Sponsored by Klara, Inc.)
+{{< sponsored "Klara, Inc." >}}
 
 The `fpu_kern_enter` and `fpu_kern_leave` routines have been implemented for powerpc, allowing the use of man:ossl[4] crypto functions in the kernel that use floating point and vector registers.
 gitref:91e53779b4fc[repository=src]
 
 Support legacy PCI hotplug on arm64.
 gitref:355f02cddbf0[repository=src].
-(Sponsored by Arm Ltd).
+{{< sponsored "Arm Ltd" >}}
 
 Jails can now be accessed via jail descriptors in jail_set(2) and jail_get(2), as well as the new jail_attach_jd(2) and jail_remove_jd(2).  They allow manipulation of jails through the file descriptor interface without the race conditions inherent in jail IDs, and can also optionally control jail lifetime.
 gitref:851dc7f859c2[repository=src]
@@ -703,7 +703,7 @@ All future MAC modules' jail parameters will appear under this node.
 See man:mac[4] for an introduction to MAC.
 First consumer is man:mac_do[4].
 gitref:5041b20503db[repository=src], gitref:f3a06ced2568[repository=src]
-(Sponsored by The FreeBSD Foundation.)
+{{< sponsored "The FreeBSD Foundation" >}}
 
 man:mac_do[4] is now considered production-ready, after a number of important fixes.
 gitref:bbf8af664dc9[repository=src],
@@ -715,17 +715,17 @@ gitref:fa4352b74580[repository=src],
 gitref:3d8d91a5b32c[repository=src],
 gitref:8f7e8726e3f5[repository=src],
 gitref:89958992b618[repository=src]
-(Sponsored by The FreeBSD Foundation.)
+{{< sponsored "The FreeBSD Foundation" >}}
 
 man:mac_do[4] now supports changing rules within jails with the `security.mac.do.rules` man:sysctl[8] knob.
 gitref:b3f93680e39b[repository=src]
-(Sponsored by The FreeBSD Foundation.)
+{{< sponsored "The FreeBSD Foundation" >}}
 
 Introduce the man:setcred[2] system call and associated MAC hooks.
 This new system call allows to set all necessary credentials of a process in one go: Effective, real and saved  user IDs, effective, real and saved group IDs, supplementary groups and the MAC label.
 Besides providing atomicity, its advantage over standard credentials-setting system calls, such as `setuid()`, `seteuid()`, etc., is that it enables MAC modules, such as man:mac_do[4], to restrict the set of credentials some process may gain in a fine-grained manner, as they can now see the final desired state and compare it with the initial one.
 gitref:ddb3eb4efe55[repository=src]
-(Sponsored by The FreeBSD Foundation.)
+{{< sponsored "The FreeBSD Foundation" >}}
 
 Support multiple users and groups as single rule's targets in man:mac_do[4].
 Supporting group targets is a requirement for man:mac_do[4] to be able to enforce a limited set of valid new groups in the target credentials and to allow group-only credentials transitions.
@@ -736,7 +736,7 @@ Please consult the man:mac_do[4] manual page for more information.
 gitref:83ffc412b2e9[repository=src],
 gitref:8f7e8726e3f5[repository=src],
 gitref:f01d26dec67f[repository=src]
-(Sponsored by The FreeBSD Foundation.)
+{{< sponsored "The FreeBSD Foundation" >}}
 
 Teach man:sysctl[8] to attach and run itself in a jail.
 This allows the parent jail to retrieve or set kernel state when child does not have man:sysctl[8] installed (for example light weighted OCI containers or slim jails).
@@ -759,7 +759,7 @@ The function is responsible for either using a free HW channel (if `vchans` are 
 `hw.snd.vchans_enable` (previously `hw.snd.maxautovchans`) and `dev.pcm.X.{play|rec}.vchans` now work as tunables to only enable/disable `vchans`, as opposed to setting their number and/or (de-)allocating vchans.
 Since these sysctls do not trigger any (de-)allocations anymore, their effect is instantaneous, whereas before it could have frozen the machine (when trying to allocate new vchans) when setting `dev.pcm.X.{play|rec}.vchans` to a very large value.
 gitref:960ee8094913[repository=src].
-(Sponsored by	The FreeBSD Foundation).
+{{< sponsored "The FreeBSD Foundation" >}}
 
 Gradual slowdowns and freezes experienced by owners of some AMD GPUs using the amdgpu DRM driver from the `drm-kmod` ports, starting with v5.15 (`graphics/drm-515-kmod` port), have been fixed.
 In particular, owners of graphics cards with Green Sardine, Polaris 10 and 20 chips were known to be affected.
@@ -776,7 +776,7 @@ gitref:4ca9190251bb[repository=src],
 gitref:986edb19a49c[repository=src],
 gitref:9d1f3ce79d85[repository=src],
 gitref:da257e519bc0[repository=src]
-(Sponsored by The FreeBSD Foundation.)
+{{< sponsored "The FreeBSD Foundation" >}}
 
 Multiple flaws were fixed in the code iterating over memory domains (NUMA).
 A failing contiguous allocation request would lead to re-examine the same domain multiple times even if it could not fulfill the request, wasting time and increasing allocation latency.
@@ -787,7 +787,7 @@ Finally, the "interleave" policy would reset the iterator index when restarting,
 gitref:da257e519bc0[repository=src],
 gitref:83ad6d8d8eee[repository=src],
 gitref:b15ff7214020[repository=src]
-(Sponsored by The FreeBSD Foundation.)
+{{< sponsored "The FreeBSD Foundation" >}}
 
 The local stream (AF_UNIX/SOCK_STREAM) and sequenced packet stream (AF_UNIX/SOCK_SEQPACKET) sockets have been improved for better bulk transfer and round trip times.
 The SOCK_SEQPACKET socket has been brought to the specification and now behaves as a true stream socket, while in previous FreeBSD releases it could exhibit features of
@@ -798,7 +798,7 @@ The effective group ID is now stored in the new `cr_gid` field of `struct cred` 
 All downstream and out-of-tree modules using `cr_groups[0]` must be fixed to use `cr_gid` instead, and surrounding code that loops on `cr_groups[]` elements excluding `cr_groups[0]`, i.e., that intends to act on supplementary groups only, also needs to be adjusted as now supplementary groups start at `&cr_groups[0]` instead of `&cr_groups[1]`.
 Code that needs to be portable to both 15.0 and earlier versions can use `cr_gid`, which existed also previously as a macro, and can test the truth value of `&cr_groups[0] != &cr_gid` to know how to browse the supplementary groups adequately.
 gitref:be1f7435ef218b1df35[repository=src]
-(Sponsored by the FreeBSD Foundation.)
+{{< sponsored "the FreeBSD Foundation" >}}
 
 [[drivers]]
 == Devices and Drivers
@@ -810,22 +810,22 @@ This section covers changes and additions to devices and device drivers since {r
 
 A driver is available for man:ice[4] Ethernet network controllers in the Intel E800 series, which support 100 Gb/s operation.
 It was upgraded to version 1.43.2-k.
-gitref:38a1655adcb3[repository=src] (Sponsored by Intel Corporation)
+gitref:38a1655adcb3[repository=src] {{< sponsored "Intel Corporation" >}}
 
 man:rtw88[4]: Merge Realtek's rtw88 driver based on Linux v6.17 (gitref:c1d365f39e08[repository=src]).
 A possible issue that devices cannot authenticate is still being investigated.
-(Sponsored by The FreeBSD Foundation).
+{{< sponsored "The FreeBSD Foundation" >}}
 
 man:rtw89[4]: Merge Realtek's rtw89 driver based on Linux v6.17 (gitref:b35044b38f74[repository=src]).
 The driver is under-tested and may still have issues.
-(Sponsored by The FreeBSD Foundation).
+{{< sponsored "The FreeBSD Foundation" >}}
 
 man:iwlwifi[4]: Merge Intels's iwlwifi mvm/mld driver based on Linux v6.17 (gitref:69caa1cf3ce5[repository=src]).
 The BE200 based chipsets will need newer firmware requiring further driver fixes which are not in this release.
-(Sponsored by The FreeBSD Foundation).
+{{< sponsored "The FreeBSD Foundation" >}}
 
 Numerous stability improvements have been in the man:iwlwifi[4] driver for Intel Wi-Fi devices.
-(Sponsored by The FreeBSD Foundation)
+{{< sponsored "The FreeBSD Foundation" >}}
 
 Multiple PCI MCFG regions are now supported on amd64 and i386, allowing PCI configuration space access for domains (segments) other than 0.
 gitref:4b5f64408804[repository=src]
@@ -836,41 +836,41 @@ gitref:028e4c6548e4[repository=src]
 
 The `snd_clone` framework has been removed from the sound subsystem, including related sysctls, simplifying the system.
 The per-channel nodes ([.filename]#/dev/dspX.Y#) are no longer created, just the primary device ([.filename]#/dev/dspX#).
-gitref:e6c51f6db8d7[repository=src] (Sponsored by The FreeBSD Foundation)
+gitref:e6c51f6db8d7[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
 Audio now supports asynchronous device detach.
 This greatly simplifies hot plugging and unplugging of things such as USB headsets, and eases use of PulseAudio in cases that require operating system sleep and wake (suspend and resume).
-gitref:d692c314d29a[repository=src] (Sponsored by The FreeBSD Foundation)
+gitref:d692c314d29a[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
 `ena` has been upgraded to 2.8.0.
-gitref:6bf02434bd9a[repository=src] (Sponsored by Amazon, Inc.)
+gitref:6bf02434bd9a[repository=src] {{< sponsored "Amazon, Inc." >}}
 
 `ice_ddp` has been upgraded to 1.3.41.0.
-gitref:a9d78bb714e3[repository=src] (Sponsored by Intel Corporation)
+gitref:a9d78bb714e3[repository=src] {{< sponsored "Intel Corporation" >}}
 
 Tiger Lake-H support has been added to the man:hda[4] driver.
 gitref:dbb6f488df6e[repository=src]
 
 Meteor Lake support has been added to the man:ichsmb[4] driver.
 gitref:14c22e28e4ee[repository=src]
-(Sponsored by Framework Computer Inc)
-(Sponsored by The FreeBSD Foundation)
+{{< sponsored "Framework Computer Inc" >}}
+{{< sponsored "The FreeBSD Foundation" >}}
 
 Meteor Lake support has been added to the man:ig4[4] driver.
 gitref:56f0fc0011c2[repository=src]
 
 A new wireless driver supporting some Realtek chipsets is available: man:rtw89[4].
-gitref:a2d1e07f6451[repository=src] (Sponsored by The FreeBSD Foundation)
+gitref:a2d1e07f6451[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
 Support for Realtek 8156/8156B has been moved from man:cdce[4] to man:ure[4] for improved performance and reliability.
-gitref:630077a84186[repository=src] (Sponsored by The FreeBSD Foundation)
+gitref:630077a84186[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
 Support for ACPI GPIO _AEI objects has been added.
-gitref:1db6ffb2a482[repository=src] (Sponsored by Amazon)
+gitref:1db6ffb2a482[repository=src] {{< sponsored "Amazon" >}}
 
 man:nvme[4] and man:nvmecontrol[8] have been enabled on all architectures.
 gitref:24687a65dd7f[repository=src], gitref:aba2d7f89dcf[repository=src]
-(Sponsored by Chelsio Communications and Netflix)
+{{< sponsored "Chelsio Communications and Netflix" >}}
 
 man:mpi3mr[4] driver version has been updated to 8.14.0.2.0(gitref:e6d4b221ba7c[repository=src]).
 
@@ -882,16 +882,16 @@ This includes updated structures, field definitions, and constants required for 
 The man:mpi3mr[4] driver is now in GENERIC (gitref:e2b8fb2202c2[repository=src]).
 
 man:rtw88[4]: Merge Realtek's rtw88 driver based on Linux v6.14 (gitref:8ef442451791[repository=src]).
-(Sponsored by The FreeBSD Foundation).
+{{< sponsored "The FreeBSD Foundation" >}}
 
 man:rtw89[4]: Merge Realtek's rtw89 driver based on Linux v6.14 (gitref:b6e8b845aeab[repository=src]).
-(Sponsored by The FreeBSD Foundation).
+{{< sponsored "The FreeBSD Foundation" >}}
 
 man:iwmbtfw[4]: Add support for 9260/9560 bluetooth adapters (gitref:8e62ae9693bd[repository=src]).
 Required firmware files are already included in to package:comms/iwmbt-firmware[] port.
 
 man:ena[4] driver version has been updated to v2.8.1 (gitref:a1685d25601e[repository=src]).
-(Sponsored by Amazon, Inc.)
+{{< sponsored "Amazon, Inc." >}}
 
 man:bnxt[4]: Enable NPAR support on BCM57504 10/25GbE NICs.
 (gitref:54f842ed8897[repository=src]).
@@ -916,23 +916,23 @@ Remove old itr sysctl handler from man:em[4].
 This implementation had various bugs.  The unit conversion/scaling was wrong, and it also did not handle 82574L or man:igb[4] devices correctly.
 With the new AIM code, it is expected most users will not need to manually tune this.
 gitref:edf50670e215[repository=src]
-(Sponsored by	BBOX.io).
+{{< sponsored "BBOX.io" >}}
 
 Added support for Brainboxes USB-to-Serial adapters in man:uftdi[4].
 (gitref:47db906375b5[repository=src])
 
 The man:iwx[4] driver has been added, supporting the Intel Wi-Fi 6 series of M.2 wireless network adapters.
-gitref:2ad0f7e91582[repository=src] (Sponsored by The FreeBSD Foundation)
+gitref:2ad0f7e91582[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
 A new cellular modem driver supports USB network devices implementing the Mobile Broadband Interface Model (MBIM): man:umb[4].
 The accompanying man:umbctl[8] tool is used to display or set MBIM cellular modem interface parameters (4G/LTE).
-gitref:0f1bf1c22a0c[repository=src] (Sponsored by The FreeBSD Foundation)
+gitref:0f1bf1c22a0c[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
 man:smbios[4] now searches for the SMBIOS v3 (64-bit) entry point first also if booted from BIOS.
 This allows to detect and report the proper SMBIOS version with BIOSes that only provide the v3 table, as happens on Hetzner virtual machines.
 For machines that provide both, leverage the v3 table in priority consistently with the EFI case.
 gitref:bc7f6508363c[repository=src]
-(Sponsored by The FreeBSD Foundation.)
+{{< sponsored "The FreeBSD Foundation" >}}
 
 The man:usbhid[4] driver is now enabled by default, and is used in preference to other USB HID drivers like man:ukbd[4], man:ums[4], and man:uhid[4].
 Supported device classes now include:
@@ -962,7 +962,7 @@ man:agp[4] has been planned for removal in FreeBSD 15.0, and the man page now st
 gitref:92af7c97e197[repository=src]
 
 man:syscons[4] has been planned for removal in future releases, and has been noted as deprecated in the man pages to notify users to migrate to man:vt[4].
-gitref:2bc5b1d60512[repository=src] (Sponsored by The FreeBSD Foundation)
+gitref:2bc5b1d60512[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
 [[storage]]
 == Storage
@@ -1004,7 +1004,7 @@ Allow to specify as many groups as configured to be supported by the system in `
 Previously, the cap was `NGROUPS_MAX + 1`, where `NGROUPS_MAX` is just the minimum maximum of the number of allowed supplementary groups.
 Now use the proper `{NGROUPS_MAX} + 1` value, with `{NGROUPS_MAX}` being fetched at runtime via man:sysconf[3].
 gitref:e87848a8150e[repository=src]
-(Sponsored by The FreeBSD Foundation.)
+{{< sponsored "The FreeBSD Foundation" >}}
 
 [[boot-loader]]
 == Boot Loader Changes
@@ -1021,39 +1021,39 @@ gitref:3eb3a802a31b[repository=src].
 Console detection in man:loader[8] has been improved on EFI systems.
 If there is no ConOut variable, ConIn is checked.
 If multiple devices are found, serial is preferred.
-gitref:20a6f4779ac6[repository=src] (Sponsored by Netflix)
+gitref:20a6f4779ac6[repository=src] {{< sponsored "Netflix" >}}
 
 Frame buffer support in man:loader[8] can now use a text-only video driver, resulting in space savings.
-gitref:57ca2848c0aa[repository=src] (Sponsored by Netflix)
+gitref:57ca2848c0aa[repository=src] {{< sponsored "Netflix" >}}
 
 The detection of ACPI is now done earlier in man:loader.efi[8] on arm64 systems.
 The copy of [.filename]#loader.efi# on the EFI partition should be updated on arm64 systems using ACPI.
 gitref:05cf4dda599a[repository=src] gitref:16c09de80135[repository=src]
 
 The LinuxBoot loader can be used to boot FreeBSD from Linux on aarch64 systems as well as amd64.
-gitref:46010641267[repository=src] (Sponsored by Netflix)
+gitref:46010641267[repository=src] {{< sponsored "Netflix" >}}
 
 The BIOS boot loader added back support for gzip and bzip2, but removed support for graphics mode (by default) to address size problems.
 (The EFI boot loader is unchanged with support for all of those.)
-gitref:4d3b05a8530e[repository=src] (Sponsored by Netflix)
+gitref:4d3b05a8530e[repository=src] {{< sponsored "Netflix" >}}
 
 The BIOS boot loader will now use the SMBIOS v3 (64-bit) entry point if its table is below 4GB.
 The BIOS boot loader is compiled 32-bit as a client of BTX even on amd64, so cannot access addresses beyond 4GB.
 However, the 64-bit entry point may refer to a structure table below 4GB, which can be used if the BIOS does not provide a 32-bit entry point, as happens on Hetzner virtual machines.
 gitref:7f005c6699f4[repository=src]
-(Sponsored by The FreeBSD Foundation.)
+{{< sponsored "The FreeBSD Foundation" >}}
 
 The BIOS boot loader now favors the SMBIOS v3 (64-bit) entry point.
 When both the 32-bit and 64-bit entry points are present, the SMBIOS specification says that the 64-bit entry point always has at least all the structures the 32-bit entry point refers to.
 In other words, the 32-bit entry point is provided for compatibility, so it is assumed the 64-bit one has more chances to be filled with adequate values.
 gitref:3f744fb8b2c5[repository=src]
-(Sponsored by The FreeBSD Foundation.)
+{{< sponsored "The FreeBSD Foundation" >}}
 
 The EFI boot loader now favors the SMBIOS v3 (64-bit) entry point.
 Consistently with what is done with BIOS boot.
 There is a difference though: As the EFI loader runs in 64-bit mode on 64-bit platforms, there is no restriction that the v3 entry point's structure table should be below 4GB.
 gitref:96f77576e9ea[repository=src]
-(Sponsored by The FreeBSD Foundation.)
+{{< sponsored "The FreeBSD Foundation" >}}
 
 [[network]]
 == Networking
@@ -1067,7 +1067,7 @@ Lots of improvements to the network stack, including performance improvements an
 
 Descriptors returned by man:sctp_peeloff[2] now inherit Capsicum capability man:rights[4] from the parent socket.
 gitref:ae3d7e27abc9[repository=src]
-(Sponsored by The FreeBSD Foundation)
+{{< sponsored "The FreeBSD Foundation" >}}
 
 [[network-general]]
 === General Network
@@ -1088,10 +1088,10 @@ The netgraph man:ng_ipfw[4] module no longer truncates cookies to 16 bits, allow
 gitref:dadf64c5586e[repository=src]
 
 AIM(Adaptive Interrupt Moderation) support has been added to the man:igc[4] driver.
-gitref:472a0ccf847a[repository=src] (Sponsored by Rubicon Communications, LLC ("Netgate") and BBOX.io)
+gitref:472a0ccf847a[repository=src] {{< sponsored "Rubicon Communications, LLC (\"Netgate\") and BBOX.io" >}}
 
 This feature has also been added to the man:lem[4], man:em[4] and man:igb[4] drivers.  A major regression in UDP performance introduced in FreeBSD 12.0, including NFS over UDP, is believed to be fixed with this change.
-gitref:49f12d5b38f6[repository=src] (Sponsored by Rubicon Communications, LLC ("Netgate") and BBOX.io)
+gitref:49f12d5b38f6[repository=src] {{< sponsored "Rubicon Communications, LLC (\"Netgate\") and BBOX.io" >}}
 
 Teach man:ip6addrctl[8] to attach and run itself in a jail.
 This will make it easier to manage address selection policies of vnet jails, especially for those light weighted OCI containers or slim jails.
@@ -1118,12 +1118,12 @@ gitref:99475087d63b[repository=src] (Sponsored by InnoGames GmbH)
 [[wireless-networking]]
 === Wireless Networking
 
-The LinuxKPI 802.11 compatibility layer man:linuxkpi_wlan[4] gained support for the Galois/Counter Mode Protocol (GCMP) from man:wlan_gcmp[4]. (Sponsored by The FreeBSD Foundation)
+The LinuxKPI 802.11 compatibility layer man:linuxkpi_wlan[4] gained support for the Galois/Counter Mode Protocol (GCMP) from man:wlan_gcmp[4]. {{< sponsored "The FreeBSD Foundation" >}}
 
-Following other drivers man:iwlwififw[4] firmware was removed from the base system in favor of the ports based solution and man:fwget[8] support.  In case of updating from earlier releases, users must install the firmware packages upfront. (Sponsored by The FreeBSD Foundation)
+Following other drivers man:iwlwififw[4] firmware was removed from the base system in favor of the ports based solution and man:fwget[8] support.  In case of updating from earlier releases, users must install the firmware packages upfront. {{< sponsored "The FreeBSD Foundation" >}}
 
-The man:iwlwifi[4] wireless driver supports 802.11ac (VHT) for some Intel Wi-Fi 5, and all of Intel Wi-Fi 6 and Wi-Fi 7 hardware. (Sponsored by The FreeBSD Foundation)
-The man:iwx[4] wireless driver supports 802.11ac (VHT) for Intel Wi-Fi 6 harddware. (Sponsored by The FreeBSD Foundation)
+The man:iwlwifi[4] wireless driver supports 802.11ac (VHT) for some Intel Wi-Fi 5, and all of Intel Wi-Fi 6 and Wi-Fi 7 hardware. {{< sponsored "The FreeBSD Foundation" >}}
+The man:iwx[4] wireless driver supports 802.11ac (VHT) for Intel Wi-Fi 6 harddware. {{< sponsored "The FreeBSD Foundation" >}}
 The man:rtwn[4] wireless driver supports 802.11ac (VHT) for the RTL8812A and RTL8821A chipsets.
 
 [[hardware]]
@@ -1143,24 +1143,24 @@ The VNC server in man:bhyve[8] will now show the correct colors when using the p
 gitref:f9e09dc5b1d5[repository=src]
 
 Under Hyper-V, TLB flushes are now performed using hypercalls rather than IPIs, providing up to a 40% improvement in TLB performance.
-gitref:7ece5993b787[repository=src] (Sponsored by Microsoft)
+gitref:7ece5993b787[repository=src] {{< sponsored "Microsoft" >}}
 
 [[linuxulator]]
 === Linux Binary Compatibility
 
 The `AT_NO_AUTOMOUNT` flag is now ignored for all Linuxulator stat() variants (as the behavior specified by the flag already matches FreeBSD's), improving Linux application compatibility.
 gitref:99d3ce80ba07[repository=src]
-(Sponsored by The FreeBSD Foundation)
+{{< sponsored "The FreeBSD Foundation" >}}
 
 The Linux man:inotify[2] system calls are now implemented in the Linuxulator.
-(Sponsored by Klara, Inc.)
+{{< sponsored "Klara, Inc." >}}
 
 [[multimedia]]
 == Multimedia
 
 Many improvements to the audio stack including support for hot-swapping in man:mixer[8], and the addition of man:mididump[1].
-gitref:cf9d2fb18433[repository=src] (Sponsored by The FreeBSD Foundation)
-gitref:7224e9f2d4af[repository=src] (Sponsored by The FreeBSD Foundation)
+gitref:cf9d2fb18433[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
+gitref:7224e9f2d4af[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
 [[documentation]]
 == Documentation
@@ -1181,24 +1181,24 @@ The preamble has been revamped to give a thorough overview of the different aspe
 The description of several options and some keywords have been fixed to match their actual behavior and/or expanded.
 The STANDARDS and BUGS sections have been expanded.
 gitref:ddf144a04b53[repository=src]
-(Sponsored by The FreeBSD Foundation.)
+{{< sponsored "The FreeBSD Foundation" >}}
 
 The man:mac_do[4] manual page has been revamped as part of adding support for multiple users and groups as single rule's targets, which lead to changing the rules syntax.
 In particular, it has grown a JAIL SUPPORT and SECURITY CONSIDERATIONS sections.
 gitref:bc201841d139[repository=src]
-(Sponsored by The FreeBSD Foundation.)
+{{< sponsored "The FreeBSD Foundation" >}}
 
 The existing content of the man:mdo[1] manual page has been enriched as part of documenting the new support for fully specifying all users and groups in the target credentials.
 It has now a longer introduction and a new SECURITY CONSIDERATIONS section.
 gitref:20ebb6ec5ac0[repository=src]
-(Sponsored by The FreeBSD Foundation.)
-(Sponsored by Google LLC (GSoC 2025).)
+{{< sponsored "The FreeBSD Foundation" >}}
+{{< sponsored "Google LLC (GSoC 2025)" >}}
 
 man:firewire[4]: Add deprecation notice.
 This was originally discussed as part of FreeBSD 15 planning, but did not happen in time.
 Add the deprecation notice now, with an expectation that it will be removed before FreeBSD 16.
 gitref:fc889167c319[repository=src].
-(Sponsored by The FreeBSD Foundation).
+{{< sponsored "The FreeBSD Foundation" >}}
 
 The ethernet switch controllers, man:mtkswitch[4], man:ip17x[4], man:ar40xx[4], and man:e6000sw[4] have gained initial manual pages.
 
@@ -1231,16 +1231,16 @@ Users who override these in `/usr/local/etc/pkg/repos` will need to adjust their
 === Installer
 
 The FreeBSD installer, man:bsdinstall[8], now supports downloading and installing firmware packages after the FreeBSD base system installation is complete.
-gitref:03c07bdc8b31[repository=src] (Sponsored by The FreeBSD Foundation)
+gitref:03c07bdc8b31[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
 [[ports-packages]]
 === Packaging Changes
 
 The bootonly ISO and mini-memstick image now include the package:net/wifi-firmware-iwlwifi-kmod[] and package:net/wifi-firmware-rtw88-kmod[] packages, making installations possible over a wireless connection (on systems supported by these firmware packages).
-gitref:655fcdde1aff[repository=src] (Sponsored by The FreeBSD Foundation)
+gitref:655fcdde1aff[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
 The package:net/wifi-firmware-kmod@release[] package has been added to the DVD ISO, providing firmware for a broader set of Wi-Fi drivers.
-gitref:8c6df7ead19c[repository=src] (Sponsored by The FreeBSD Foundation)
+gitref:8c6df7ead19c[repository=src] {{< sponsored "The FreeBSD Foundation" >}}
 
 [[future-releases]]
 == General Notes Regarding Future FreeBSD Releases
