--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -1057,6 +1057,19 @@ gitref:7f7ef494f11d[repository=src] introduced a compile time option `PF_DEFAULT
 While this change exposes a vnet loader tunable 'net.pf.default_to_drop' so that users can change the default rule without re-compiling the man:pf[4] module.
 gitref:3965be101c43[repository=src]
 
+A new man:pf[4] route-to pool option "prefer-ipv6-nexthop" allows for routing IPv4 packets over IPv6 gateways.
+gitref:65c318630123[repository=src] gitref:d2761422eb0a[repository=src] (Sponsored by InnoGames GmbH)
+
+man:pf[4] now supports the OpenBSD style NAT syntax.
+It is possible to use "nat-to", "rdr-to" and "binat-to" on "pass" and "match" rules. The old "nat on ..." syntax can still be used.
+gitref:e0fe26691fc9[repository=src] (Sponsored by InnoGames GmbH)
+
+The man:pfsync[4] protocol has been updated to synchronize multiple missing attributes.
+This fixes synchronizing of states with route-to, af-to, rtable, dummynet, tags, and scrub options.
+If synchronization with an older version of FreeBSD is needed the protocol version can be configured with `ifconfig pfsync0 version $VERSION` where $VERSION is 1301 for 13.X relases or 1400 for 14.X.
+It defaults to 1500 for synchronization between hosts running FreeBSD 15.0.
+gitref:99475087d63b[repository=src] (Sponsored by InnoGames GmbH)
+
 [[wireless-networking]]
 === Wireless Networking
 
