rc-scripting: fix the "instancing" example
- fix the name of the config variable
- add the missing "="

--- a/documentation/content/en/articles/rc-scripting/_index.adoc
+++ b/documentation/content/en/articles/rc-scripting/_index.adoc
@@ -963,9 +963,9 @@ eval "${rcvar}=\${${rcvar}:-'NO'}" <.>
 eval "${name}_svcj_options=\${${name}_svcj_options:-'net_basic'}" <.>
 eval "_dummy_user=\${${name}_user:-'www'}" <.>
 
-_dummy_configname=/usr/local/etc/${name}.cfg <.>
+_dummy_configfile=/usr/local/etc/${name}.cfg <.>
 pidfile=/var/run/dummy/${name}.pid
-required_files ${_dummy_configname}
+required_files=${_dummy_configfile}
 command_args="-u ${_dummy_user} -c ${_dummy_configfile} -p ${pidfile}"
 
 run_rc_command "$1"
