--- a/website/content/en/releases/15.0R/relnotes.adoc
+++ b/website/content/en/releases/15.0R/relnotes.adoc
@@ -1208,7 +1208,10 @@ gitref:03c07bdc8b31[repository=src] (Sponsored by The FreeBSD Foundation)
 [[ports-packages]]
 === Packaging Changes
 
-The package:net/wifi-firmware-kmod@release[] package has been added to the DVD package set in order to provide necessary firmware for wifi drivers.
+The bootonly ISO and mini-memstick image now include the package:net/wifi-firmware-iwlwifi-kmod[] and package:net/wifi-firmware-rtw88-kmod[] packages, making installations possible over a wireless connection (on systems supported by these firmware packages).
+gitref:655fcdde1aff[repository=src] (Sponsored by The FreeBSD Foundation)
+
+The package:net/wifi-firmware-kmod@release[] package has been added to the DVD ISO, providing firmware for a broader set of Wi-Fi drivers.
 gitref:8c6df7ead19c[repository=src] (Sponsored by The FreeBSD Foundation)
 
 [[future-releases]]
